Fixed main body, no longer covered by navbar

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -36,6 +36,7 @@
 }
 body {
     background-color: #FEFEB1;
+    padding-top: 10%;
 }
 @media (max-width: 700px) {
     #about-imgs {
